[tool.poetry]
name = "first-todo-web-app"
version = "0.1.0"
description = ""
authors = ["Ryu Takahashi <107231834+ryu-thakahashi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
